# axon

./: .gitignore  BACKEND.md  CLAUDE.md  DESIGN.md  NAMED_DIMS.md  PLAN.md  README.md  main.py  pyproject.toml
src/axon/: __init__.py  backward.py  dtype.py  errors.py  node.py  op.py  parameter.py  scalar.py  tensor.py  var.py
src/axon/backend/: __init__.py  _cupy.py  _dtype.py  _mlx.py  _numpy.py  protocol.py
src/axon/functional/: __init__.py
src/axon/net/: __init__.py  linear.py  net.py
src/axon/net/activation/: __init__.py  sigmoid.py
src/axon/net/loss/: __init__.py  cross_entropy.py  mse.py
src/axon/operation/: __init__.py  add.py  div.py  matmul.py  mul.py  neg.py  op.py  pow.py
src/axon/operation/binary/: __init__.py  add.py  base.py  mat_mul.py  mul.py  pow.py
src/axon/operation/stable/: __init__.py  cross_entropy.py  div.py  mse.py  sigmoid.py
src/axon/operation/unary/: __init__.py  base.py
src/axon/optim/: __init__.py  optimizer.py  sgd.py
src/examples/: cifar.ipynb  cifar.py  pure_mnist.ipynb  pure_mnist.py  tensor.py
src/examples/pure/: pure_mnist.ipynb  pure_mnist.py  xp_cifar_mlp.ipynb  xp_fashion_mnist.ipynb  xp_mnist.ipynb
tests/: conftest.py  test_backends.py
